--- a/KNN - Regresion.ipynb
+++ b/KNN - Regresion.ipynb
@@ -38,10 +38,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6SpXK_NIcPZy",
-        "outputId": "316bec9b-9251-4f98-efa9-83bf0affd27c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "942291ca-1a6d-47c5-b72d-ed1b1e07514f"
       },
       "source": [
         "import numpy as np\n",
@@ -49,12 +49,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -74,31 +74,32 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 231
+          "base_uri": "https://localhost:8080/"
         },
         "id": "iKGgvbo-caps",
-        "outputId": "efa3774b-494f-4f31-b252-c04f134d6ade"
+        "outputId": "23ce4f23-d7b2-420a-f82e-3c17bc49f5b9"
       },
       "source": [
-        "path = \"/content/drive/My Drive/regresion.csv\"\n",
+        "path = \"/content/drive/My Drive/Dataset/regresi.csv\"\n",
         "data = pd.read_csv(path)\n",
-        "X = array[:,:3]\n",
+        "array = data.values\n",
+        "X = array[:,:2]\n",
         "Y = array[:,:-1]\n",
         "data.shape\n"
       ],
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-18903a7712d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/content/drive/My Drive/regresion.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
         }
       ]
     },
@@ -116,15 +117,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 359
         },
         "id": "MssTCdDGdOxr",
-        "outputId": "acb85e82-5bd4-45dc-95a6-97007e2648ff"
+        "outputId": "98655266-9006-4e0e-b8ab-b17d147ab0d7"
       },
       "source": [
         "data.head(10)"
       ],
-      "execution_count": 12,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,73 +149,83 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Menang</th>\n",
-              "      <th>Kalah</th>\n",
-              "      <th>Predksi Menang Kalah</th>\n",
+              "      <th>Berat Badan(gr/ekor)</th>\n",
+              "      <th>Harga</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>20</td>\n",
-              "      <td>11</td>\n",
-              "      <td>5</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>40</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>32</td>\n",
-              "      <td>12</td>\n",
-              "      <td>4</td>\n",
+              "      <td>1000</td>\n",
+              "      <td>20</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>15</td>\n",
-              "      <td>10</td>\n",
-              "      <td>2</td>\n",
+              "      <td>3000</td>\n",
+              "      <td>60</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>23</td>\n",
-              "      <td>14</td>\n",
-              "      <td>4</td>\n",
+              "      <td>6000</td>\n",
+              "      <td>120</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>14</td>\n",
-              "      <td>15</td>\n",
-              "      <td>1</td>\n",
+              "      <td>78000</td>\n",
+              "      <td>1560</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>27</td>\n",
-              "      <td>17</td>\n",
-              "      <td>3</td>\n",
+              "      <td>111000</td>\n",
+              "      <td>2220</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>40</td>\n",
-              "      <td>19</td>\n",
-              "      <td>3</td>\n",
+              "      <td>88000</td>\n",
+              "      <td>1760</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>7000</td>\n",
+              "      <td>140</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>92000</td>\n",
+              "      <td>1840</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>45000</td>\n",
+              "      <td>900</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   Menang  Kalah  Predksi Menang Kalah\n",
-              "0      20     11                     5\n",
-              "1      32     12                     4\n",
-              "2      15     10                     2\n",
-              "3      23     14                     4\n",
-              "4      14     15                     1\n",
-              "5      27     17                     3\n",
-              "6      40     19                     3"
+              "   Berat Badan(gr/ekor)  Harga\n",
+              "0                  2000     40\n",
+              "1                  1000     20\n",
+              "2                  3000     60\n",
+              "3                  6000    120\n",
+              "4                 78000   1560\n",
+              "5                111000   2220\n",
+              "6                 88000   1760\n",
+              "7                  7000    140\n",
+              "8                 92000   1840\n",
+              "9                 45000    900"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 33
         }
       ]
     },
@@ -222,27 +233,36 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 163
+          "base_uri": "https://localhost:8080/"
         },
         "id": "jJmJDF8qc7zJ",
-        "outputId": "b8b79aa6-328a-4c4b-9de2-258c00b8c56f"
+        "outputId": "f3b7e87b-aeae-4ce3-d6fb-00372301bc1e"
       },
       "source": [
         "X"
       ],
-      "execution_count": 15,
+      "execution_count": 34,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-b5fec669aca1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  2000,     40],\n",
+              "       [  1000,     20],\n",
+              "       [  3000,     60],\n",
+              "       [  6000,    120],\n",
+              "       [ 78000,   1560],\n",
+              "       [111000,   2220],\n",
+              "       [ 88000,   1760],\n",
+              "       [  7000,    140],\n",
+              "       [ 92000,   1840],\n",
+              "       [ 45000,    900]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
         }
       ]
     },
@@ -250,27 +270,36 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 163
+          "base_uri": "https://localhost:8080/"
         },
         "id": "09-6852IdDDP",
-        "outputId": "bd44400d-fd4f-4ddd-d42e-eca424b1f9ec"
+        "outputId": "58c1b7ab-0956-4b93-d4b4-03adb7e441c0"
       },
       "source": [
-        "Y[0:3]"
+        "Y"
       ],
-      "execution_count": 20,
+      "execution_count": 49,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-164f2c62a0b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'Y' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  2000],\n",
+              "       [  1000],\n",
+              "       [  3000],\n",
+              "       [  6000],\n",
+              "       [ 78000],\n",
+              "       [111000],\n",
+              "       [ 88000],\n",
+              "       [  7000],\n",
+              "       [ 92000],\n",
+              "       [ 45000]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
         }
       ]
     },
@@ -287,31 +316,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2N355viZoR-T",
-        "outputId": "4a77bac5-3447-44e1-911b-3e30e89e24b0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 180
-        }
+        "id": "2N355viZoR-T"
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size = 0.40)"
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-84ad8a8fea5c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.40\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 65,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -333,28 +345,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCnZPOn4eFyF",
-        "outputId": "1196f044-f0b4-4664-f2a3-47230f22ee05"
+        "outputId": "aa05d9e6-d823-40e2-8794-687b239fec0b"
       },
       "source": [
         "from sklearn.neighbors import KNeighborsRegressor\n",
-        "knnr = KNeighborsRegressor(n_neighbors = 10)\n",
+        "knnr = KNeighborsRegressor(n_neighbors = 6)\n",
         "knnr.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "KNeighborsRegressor(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-              "                    metric_params=None, n_jobs=None, n_neighbors=10, p=2,\n",
+              "                    metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
               "                    weights='uniform')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 68
         }
       ]
     },
@@ -376,31 +388,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A4IC1U66egUH",
-        "outputId": "6649e5ab-e3a7-43c1-d0b3-2883cc088fc0"
+        "outputId": "40fb6cba-0ae2-4721-83b6-a2963c34814c"
       },
       "source": [
         "y_predict = knnr.predict(X_test)\n",
         "y_predict\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([43.52 , 39.223, 40.684, 31.384, 34.448, 41.74 , 38.367, 30.701,\n",
-              "       33.296, 44.845, 31.919, 37.686, 34.675, 40.642, 35.426, 43.548,\n",
-              "       33.03 , 30.018, 43.52 , 44.711, 37.67 , 41.004, 33.432, 32.146,\n",
-              "       33.432, 36.483, 36.669, 37.058, 32.12 , 35.933, 30.715, 37.67 ,\n",
-              "       34.729, 37.67 , 34.729, 44.364, 29.363, 34.769, 35.72 , 31.746,\n",
-              "       36.053, 39.156])"
+              "array([[44833.33333333],\n",
+              "       [44833.33333333],\n",
+              "       [44833.33333333],\n",
+              "       [44833.33333333]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 69
         }
       ]
     },
@@ -411,28 +421,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9ecb9069-6c80-4ab9-c5ef-40fd1375faeb"
+        "outputId": "8f1697c8-1b9c-4fe2-cff1-1766ab3b8683"
       },
       "source": [
         "y_test"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([49.3 , 37.39, 38.46, 31.77, 33.91, 42.08, 34.18, 18.26, 36.46,\n",
-              "       38.59, 26.82, 33.11, 33.38, 39.4 , 31.37, 43.95, 31.5 , 19.19,\n",
-              "       52.65, 45.42, 41.81, 46.36, 41.81, 27.62, 41.14, 36.19, 34.99,\n",
-              "       28.03, 37.66, 35.52, 30.43, 41.01, 36.72, 41.54, 28.7 , 44.08,\n",
-              "       17.19, 25.21, 32.71, 26.28, 32.44, 49.97])"
+              "array([[  7000],\n",
+              "       [  1000],\n",
+              "       [ 45000],\n",
+              "       [111000]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 70
         }
       ]
     },
@@ -452,17 +461,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d1f061ac-cad0-4d90-824a-54d2e8afb018"
+        "outputId": "3686474e-8e0e-46d1-c2c8-5dd580e08c63"
       },
       "source": [
         "print (\"The MSE is:\",format(np.power(y_test-y_predict,2).mean()))"
       ],
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The MSE is: 31.433718666666657\n"
+            "The MSE is: 1932694444.4444442\n"
           ],
           "name": "stdout"
         }
