Add DDoS Threat Detection

--- a/Data Challenge/Data_KPK.ipynb
+++ b/Data Challenge/Data_KPK.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Untitled2.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/hrtywhy/Machine-Learning/blob/main/datachallenge.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,9 +12,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "1b8vC4mbubbo"
       },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -38,12 +24,11 @@
         "import glob\n",
         "from sklearn.cluster import KMeans\n",
         "from sklearn.metrics import silhouette_samples, silhouette_score"
-      ],
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,95 +36,88 @@
         "id": "j4YMn2LGviN7",
         "outputId": "a32913c7-face-409f-c1cd-ec23d9f94c23"
       },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount ('/content/drive')"
-      ],
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount ('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "1rtc5K5m8Q-I"
       },
+      "outputs": [],
       "source": [
         "cp /content/drive/MyDrive/jaga/Desa/Penyerapan_Dana_Desa_2018.xlsx /content/"
-      ],
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "iKGiJvVkpMqr"
       },
+      "outputs": [],
       "source": [
         "cp /content/drive/MyDrive/jaga/Desa/Penyerapan_Dana_Desa_2019.xlsx /content/"
-      ],
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "id": "jQ9dO0HFpRCe"
       },
+      "outputs": [],
       "source": [
         "cp /content/drive/MyDrive/jaga/Desa/Penyerapan_Dana_Desa_2020.xlsx /content/"
-      ],
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "HnESoztKpUVw"
       },
+      "outputs": [],
       "source": [
         "cp /content/drive/MyDrive/jaga/Desa/Penyerapan_Dana_Desa_2021.xlsx /content/"
-      ],
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "id": "JgfRuANOpXt3"
       },
+      "outputs": [],
       "source": [
         "cp /content/drive/MyDrive/jaga/Desa/Desa.xlsx.xlsx /content/"
-      ],
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
-        "id": "8pYeN_xnpdiw",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 719
         },
+        "id": "8pYeN_xnpdiw",
         "outputId": "4abe2697-7c50-4fb3-a80f-87ff91a01023"
       },
-      "source": [
-        "sheet = 'Sheet1'\n",
-        "data_2018 = pd.read_excel(\"Penyerapan_Dana_Desa_2018.xlsx\", sheet_name=sheet)\n",
-        "data_2018.head(10)"
-      ],
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -367,30 +345,30 @@
               "[10 rows x 14 columns]"
             ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "sheet = 'Sheet1'\n",
+        "data_2018 = pd.read_excel(\"Penyerapan_Dana_Desa_2018.xlsx\", sheet_name=sheet)\n",
+        "data_2018.head(10)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
-        "id": "Fe-Zji99pkCS",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 719
         },
+        "id": "Fe-Zji99pkCS",
         "outputId": "c6713586-e8d9-41df-80d2-edd0b8fe5f02"
       },
-      "source": [
-        "sheet = 'Sheet1'\n",
-        "data_2019 = pd.read_excel(\"Penyerapan_Dana_Desa_2019.xlsx\", sheet_name=sheet)\n",
-        "data_2019.head(10)"
-      ],
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -618,30 +596,30 @@
               "[10 rows x 14 columns]"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "sheet = 'Sheet1'\n",
+        "data_2019 = pd.read_excel(\"Penyerapan_Dana_Desa_2019.xlsx\", sheet_name=sheet)\n",
+        "data_2019.head(10)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
-        "id": "1y8oLCxJpu7k",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 753
         },
+        "id": "1y8oLCxJpu7k",
         "outputId": "6e934bfb-95ea-47a8-8d10-b3c91d17c235"
       },
-      "source": [
-        "sheet = 'Sheet1'\n",
-        "data_2020 = pd.read_excel(\"Penyerapan_Dana_Desa_2020.xlsx\", sheet_name=sheet)\n",
-        "data_2020.head(10)"
-      ],
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -869,30 +847,30 @@
               "[10 rows x 14 columns]"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "sheet = 'Sheet1'\n",
+        "data_2020 = pd.read_excel(\"Penyerapan_Dana_Desa_2020.xlsx\", sheet_name=sheet)\n",
+        "data_2020.head(10)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
       "metadata": {
-        "id": "OtmTIMGJpffE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 787
         },
+        "id": "OtmTIMGJpffE",
         "outputId": "401452b4-f1f3-4754-c77b-e7a8ad52e68d"
       },
-      "source": [
-        "sheet = 'Sheet1'\n",
-        "data_2021 = pd.read_excel(\"Penyerapan_Dana_Desa_2021.xlsx\", sheet_name=sheet)\n",
-        "data_2021.head(10)"
-      ],
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -1120,30 +1098,30 @@
               "[10 rows x 14 columns]"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "sheet = 'Sheet1'\n",
+        "data_2021 = pd.read_excel(\"Penyerapan_Dana_Desa_2021.xlsx\", sheet_name=sheet)\n",
+        "data_2021.head(10)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
       "metadata": {
-        "id": "w3Q6jMrO9_iV",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
         },
+        "id": "w3Q6jMrO9_iV",
         "outputId": "2f99a47e-0914-4475-888d-31c55186de13"
       },
-      "source": [
-        "sheet = 'Sheet1'\n",
-        "data_desa = pd.read_excel(\"Desa.xlsx.xlsx\", sheet_name=sheet)\n",
-        "data_desa.head(10)"
-      ],
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -1316,31 +1294,33 @@
               "[10 rows x 9 columns]"
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "sheet = 'Sheet1'\n",
+        "data_desa = pd.read_excel(\"Desa.xlsx.xlsx\", sheet_name=sheet)\n",
+        "data_desa.head(10)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "2IHj2VriQxX2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 180
         },
+        "id": "2IHj2VriQxX2",
         "outputId": "d77471f8-5c3f-4034-868d-12a34a9d3c57"
       },
-      "source": [
-        "data_2018_1 = pd.DataFrame(data_2018['realisasi_tahap_1'], data_2018['realisasi_tahap_2'], data_2018['realisasi_tahap_3'])\n",
-        "data_2018_1"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "NameError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -1348,7 +1328,27 @@
             "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
           ]
         }
+      ],
+      "source": [
+        "data_2018_1 = pd.DataFrame(data_2018['realisasi_tahap_1'], data_2018['realisasi_tahap_2'], data_2018['realisasi_tahap_3'])\n",
+        "data_2018_1"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "Untitled2.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
